--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
         <title>Trebolo</title>
-        <meta name="description" content="The description should optimally be between 150-160 characters.">
+        <meta name="description" content="Trebolo Coming Soon Website">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Trebolo">
         <link rel="shortcut icon" href="img/favicon.png">
