updated with bauhaus design

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <!-- <link rel="shortcut icon" href="img/favicon.png"> -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css" />
 		<script src="js/modernizr.custom.js"></script>
@@ -24,13 +25,14 @@
 
 		<!-- Overlay and Star effect -->
 		<div class="global-overlay">
+			<div class="bauhaus animate__animated"></div>
 			<div class="overlay skew-part"></div>
 		</div>
 		<section id="left-side">
 			<!-- <img src="img/logo.png" alt="" class="brand-logo" /> -->
 			<div class="content">
 				<h1 class="text-intro opacity-0">Welcome To Trebolo!</h1>
-				<h2 class="text-intro opacity-0">Perfect and awesome template to present your future product or service.<br>Hooking audience attention is all in the opener.</h2>
+				<h2 class="text-intro opacity-0">At Trebolo, our objective is to help musicians of all shapes and sizes continue to grow and reach their musical potential. We achieved this by utilizing the latest and greatest in technological advancement.</h2>
 				<nav>
 					<ul>
 						<li>
@@ -40,7 +42,6 @@
 				</nav>
 			</div>
 		</section>
-
 		<section id="right-side" class="hide-right">
 			<div class="content">
 				<h3>Have A Question?</h3>
