--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<!-- <img src="img/logo.png" alt="" class="brand-logo" /> -->
 			<div class="content">
 				<h1 class="text-intro opacity-0">Welcome To Trebolo!</h1>
-				<h2 class="text-intro opacity-0">At Trebolo, our objective is to help musicians of all shapes and sizes continue to grow and reach their musical potential. We achieved this by utilizing the latest and greatest in technological advancement.</h2>
+				<h2 class="text-intro opacity-0">Up to 70% of new musicians abandon their musical instrument within the first year. At Trebolo, we are fighting to change that. We believe that by developing and utilizing new techologies, we can empower new musicians to continue their journey forward, and provide experienced musicians the tools and the data to push through whatever barrier they are facing.</h2>
 				<nav>
 					<ul>
 						<li>
@@ -45,39 +45,20 @@
 		<section id="right-side" class="hide-right">
 			<div class="content">
 				<h3>Have A Question?</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				<p>If you have a question for us, please fill out the contact form below and we will try to respond in a timely manner. If you don't hear from us right away, please have patience, as we are very busy building out our Software and Hardware product lines. Thank you!</p>
 
-            	<form id="contact-form" name="contact-form" method="POST" data-name="Contact Form">
+            	<form id="contact-us" method="POST" action="https://formspree.io/f/mjkbbeqa">
             		<div class="row">
-
-                        <!-- Name -->
-                        <div class="col-12 col-lg-6">
+                        <div class="col-12 col-lg-12">
                             <div class="form-group">
-                                <input type="text" id="name" class="form form-control" placeholder="Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Name'" name="name" data-name="Name" required>
+                                <input type="email" id="email" class="form form-control" placeholder="Email" name="email" required>
                             </div>
                         </div>
-
-                        <!-- E-mail -->
-                        <div class="col-12 col-lg-6">
-                            <div class="form-group">
-                                <input type="email" id="email" class="form form-control" placeholder="Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Email'" name="email-address" data-name="Email Address" required>
-                            </div>
-                        </div>
-
-                        <!-- Subject -->
-                        <div class="col-xs-12 col-sm-12 col-lg-12">
-                            <div class="form-group">
-                                <input type="text" id="subject" class="form form-control" placeholder="Subject" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Write the subject'" name="subject" data-name="Subject">
-                            </div>
-                        </div>
-
-                        <!-- Message -->
                         <div class="col-xs-12 col-sm-12 col-lg-12 no-padding">
                             <div class="form-group">
-                                <textarea id="text-area" class="form textarea form-control" placeholder="Message" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your message here... 20 characters Min.'" name="message" data-name="Text Area" required></textarea>
+                                <textarea id="text-area" class="form textarea form-control" placeholder="Message" name="message" required></textarea>
                             </div>
                         </div>
-
                     </div>
 
                 	<!-- Button submit -->
